RESOLVED FIXED 243674
REGRESSION (253157@main): 16 stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment tests are failing on JSC Debug bots
https://bugs.webkit.org/show_bug.cgi?id=243674
Summary REGRESSION (253157@main): 16 stress/jsonp-program-evaluate-path-must-consider...
Karl Rackler
Reported 2022-08-08 10:03:20 PDT
Description: The following JSC tests are failing on debug bots: stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.default stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.dfg-eager stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.dfg-eager-no-cjit-validate stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.eager-jettison-no-cjit stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-eager stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-eager-no-cjit-b3o1 stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-no-cjit-b3o0 stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-no-cjit-no-inline-validate stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-no-cjit-no-put-stack-validate stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-no-cjit-small-pool stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-no-cjit-validate-sampling-profiler stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.mini-mode stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.no-cjit-validate-phases stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.no-ftl stress/jsonp-program-evaluate-path-must-consider-global-lexical-environment.js.no-llint https://build.webkit.org/#/builders/378/builds/1483 History: https://results.webkit.org/?limit=50000&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.default&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.dfg-eager&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.dfg-eager-no-cjit-validate&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.eager-jettison-no-cjit&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-eager&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-eager-no-cjit&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-eager-no-cjit-b3o1&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-no-cjit-b3o0&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-no-cjit-no-inline-validate&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-no-cjit-no-put-stack-validate&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-no-cjit-small-pool&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.ftl-no-cjit-validate-sampling-profiler&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.mini-mode&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.no-cjit-validate-phases&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.no-ftl&test=stress%2Fjsonp-program-evaluate-path-must-consider-global-lexical-environment.js.no-llint&platform=mac Crash Log: https://build.webkit.org/#/builders/378/builds/1483/steps/12/logs/stdio ERROR: Unchecked JS exception: This scope can throw a JS exception: getNonIndexPropertySlot @ /Volumes/Data/worker/Apple-Monterey-Debug-Build/build/Source/JavaScriptCore/runtime/JSObjectInlines.h:152 (ExceptionScope::m_recursionDepth was 7) But the exception was unchecked as of this scope: put @ runtime/JSGlobalObject.cpp:1711 (ExceptionScope::m_recursionDepth was 7) Unchecked exception detected at: 1 0x118c30db8 JSC::VM::verifyExceptionCheckNeedIsSatisfied(unsigned int, JSC::ExceptionEventLocation&) 2 0x118c0c0b4 JSC::ThrowScope::ThrowScope(JSC::VM&, JSC::ExceptionEventLocation) 3 0x118c0c0e8 JSC::ThrowScope::ThrowScope(JSC::VM&, JSC::ExceptionEventLocation) 4 0x1188e4b40 JSC::JSGlobalObject::put(JSC::JSCell*, JSC::JSGlobalObject*, JSC::PropertyName, JSC::JSValue, JSC::PutPropertySlot&) 5 0x1184765f4 JSC::JSValue::put(JSC::JSGlobalObject*, JSC::PropertyName, JSC::JSValue, JSC::PutPropertySlot&) 6 0x1182a9370 JSC::Interpreter::executeProgram(JSC::SourceCode const&, JSC::JSGlobalObject*, JSC::JSObject*) 7 0x11873c7e8 JSC::evaluate(JSC::JSGlobalObject*, JSC::SourceCode const&, JSC::JSValue, WTF::NakedPtr<JSC::Exception>&) 8 0x10470a8c4 functionLoadString(JSC::JSGlobalObject*, JSC::CallFrame*) 9 0x12100803c 10 0x116e6881c llint_entry 11 0x116e42f38 vmEntryToJavaScript 12 0x1182aa564 JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) 13 0x1182a9b94 JSC::Interpreter::executeProgram(JSC::SourceCode const&, JSC::JSGlobalObject*, JSC::JSObject*) 14 0x11873c7e8 JSC::evaluate(JSC::JSGlobalObject*, JSC::SourceCode const&, JSC::JSValue, WTF::NakedPtr<JSC::Exception>&) 15 0x10474f314 runWithOptions(GlobalObject*, CommandLine&, bool&) 16 0x1047045d8 jscmain(int, char**)::$_12::operator()(JSC::VM&, GlobalObject*, bool&) const 17 0x1046cec00 int runJSC<jscmain(int, char**)::$_12>(CommandLine const&, bool, jscmain(int, char**)::$_12 const&) 18 0x1046cc538 jscmain(int, char**) 19 0x1046cc148 main 20 0x104a5d088 ASSERTION FAILED: !m_needExceptionCheck runtime/VM.cpp(1350) : void JSC::VM::verifyExceptionCheckNeedIsSatisfied(unsigned int, ERROR: Unchecked JS exception: This scope can throw a JS exception: getNonIndexPropertySlot @ /Volumes/Data/worker/Apple-Monterey-Debug-Build/build/Source/JavaScriptCore/runtime/JSObjectInlines.h:152 (ExceptionScope::m_recursionDepth was 7) But the exception was unchecked as of this scope: put @ runtime/JSGlobalObject.cpp:1711 (ExceptionScope::m_recursionDepth was 7) Unchecked exception detected at: 1 0x118c30db8 JSC::VM::verifyExceptionCheckNeedIsSatisfied(unsigned int, JSC::ExceptionEventLocation&) 2 0x118c0c0b4 JSC::ThrowScope::ThrowScope(JSC::VM&, JSC::ExceptionEventLocation) 3 0x118c0c0e8 JSC::ThrowScope::ThrowScope(JSC::VM&, JSC::ExceptionEventLocation) 4 0x1188e4b40 JSC::JSGlobalObject::put(JSC::JSCell*, JSC::JSGlobalObject*, JSC::PropertyName, JSC::JSValue, JSC::PutPropertySlot&) 5 0x1184765f4 JSC::JSValue::put(JSC::JSGlobalObject*, JSC::PropertyName, JSC::JSValue, JSC::PutPropertySlot&) 6 0x1182a9370 JSC::Interpreter::executeProgram(JSC::SourceCode const&, JSC::JSGlobalObject*, JSC::JSObject*) 7 0x11873c7e8 JSC::evaluate(JSC::JSGlobalObject*, JSC::SourceCode const&, JSC::JSValue, WTF::NakedPtr<JSC::Exception>&) 8 0x10470a8c4 functionLoadString(JSC::JSGlobalObject*, JSC::CallFrame*) 9 0x12100803c 10 0x116e6881c llint_entry 11 0x116e42f38 vmEntryToJavaScript 12 0x1182aa564 JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) 13 0x1182a9b94 JSC::Interpreter::executeProgram(JSC::SourceCode const&, JSC::JSGlobalObject*, JSC::JSObject*) 14 0x11873c7e8 JSC::evaluate(JSC::JSGlobalObject*, JSC::SourceCode const&, JSC::JSValue, WTF::NakedPtr<JSC::Exception>&) 15 0x10474f314 runWithOptions(GlobalObject*, CommandLine&, bool&) 16 0x1047045d8 jscmain(int, char**)::$_12::operator()(JSC::VM&, GlobalObject*, bool&) const 17 0x1046cec00 int runJSC<jscmain(int, char**)::$_12>(CommandLine const&, bool, jscmain(int, char**)::$_12 const&) 18 0x1046cc538 jscmain(int, char**) 19 0x1046cc148 main 20 0x104a5d088 ASSERTION FAILED: !m_needExceptionCheck runtime/VM.cpp(1350) : void JSC::VM::verifyExceptionCheckNeedIsSatisfied(unsigned int, JSC::ExceptionEventLocation &)
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-08 10:03:44 PDT
Yusuke Suzuki
Comment 2 2022-08-08 10:17:31 PDT
Yijia Huang
Comment 3 2022-08-08 12:15:53 PDT
Yijia Huang
Comment 4 2022-08-08 12:29:37 PDT
Yijia Huang
Comment 5 2022-08-08 12:46:39 PDT
(In reply to Yijia Huang from comment #3) > Pull request: https://github.com/WebKit/WebKit/pull/3021 Ignore this, please.
EWS
Comment 6 2022-08-08 14:05:45 PDT
Committed 253233@main (6f10652c4e36): <https://commits.webkit.org/253233@main> Reviewed commits have been landed. Closing PR #3109 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.