Fix unverified exception in JSONPPathEntryTypeCall https://bugs.webkit.org/show_bug.cgi?id=243674 rdar://98326554

Reviewed by NOBODY (OOPS!).

Since hasProperty might throw an exception, we need to handle the exception in both branches before proceeding.

* Source/JavaScriptCore/interpreter/Interpreter.cpp:
(JSC::Interpreter::executeProgram):